ready pip package v 1.0.0

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,6 @@
 # .env
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
 ELEVENLABS_API_KEY=
+OPENAI_API_KEY=
+# or
+# AZURE_OPENAI_API_KEY=
+# AZURE_OPENAI_ENDPOINT=
